Progress on draft.

--- a/math/latex_macros_general.tex
+++ b/math/latex_macros_general.tex
@@ -2,6 +2,7 @@
 
 % Useful info on newcomand: https://tex.stackexchange.com/questions/117358/newcommand-argument-confusion
 
+
 % --------------------------------------------------------------------------------------------------
 % General commands.  
 % --------------------------------------------------------------------------------------------------
@@ -20,6 +21,7 @@
 \newcommand{\Exp}[1]{\exp\mathopen{}\left\{#1\right\}\mathclose{}}
 \newcommand{\Log}[1]{\log\mathopen{}\left\{#1\right\}\mathclose{}}
 \newcommand{\BigO}{\mathcal{O}}
+\newcommand{\Def}{\coloneqq} % coloneqq comes from the mathtools package. 
 
 \DeclareMathOperator*{\argmax}{argmax}
 \DeclareMathOperator*{\argmin}{argmin}
