--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -152,6 +152,7 @@ year = {2021}
 % Utilize a plug-in estimator for the likelihood which computes a quantile of the emulator distribution, the idea being that something like the 90th percentile represents 
 % a conservative estimate of the true likelihood. They also incorporate bound constraints to account for the fact that they are emulating a non-negative quantity (in their 
 % case, the unnormalized log Gaussian likelihood). 
+% Sequential design is based on optimizing a Cauchy-Schwarz divergence. 
 @misc{quantileApprox,
       title={Solving Bayesian Inverse Problems With Expensive Likelihoods Using Constrained Gaussian Processes and Active Learning}, 
       author={Maximilian Dinkel and Carolin M. Geitner and Gil Robalo Rei and Jonas Nitzler and Wolfgang A. Wall},
@@ -228,6 +229,7 @@ DOI = {10.5194/bg-15-5801-2018}
 
 % First consider an approach from propagating uncertainty in GP hyperparameters. Consider adding GP cov to the observation cov. 
 % Then consider using a secondary GP fit to the residuals to correct the first one. 
+% They also use a sequential design scheme based on optimizing a Cauchy-Schwarz divergence. 
 @article{hydrologicalModel,
 author = {Zhang, Jiangjiang and Zheng, Qiang and Chen, Dingjiang and Wu, Laosheng and Zeng, Lingzao},
 title = {Surrogate-Based Bayesian Inverse Modeling of the Hydrological System: An Adaptive Approach Considering Surrogate Approximation Error},
@@ -349,6 +351,7 @@ year = {2021}
       primaryClass={stat.ME}
 }
 
+% Calibrate, Emulate, Sample. 
 % Utilize Ensemble Kalman Inversion (EKI) or Ensemble Kalman Sampling (EKI) as cheap design method. 
 @article{CES,
 	doi = {10.1016/j.jcp.2020.109716},
