--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -136,7 +136,7 @@ the defining property of the GP can be written as
 Now suppose that we have observed the (noiseless) function evaluations $\func(\designIn)$ at a set of \textit{design points} $\designIn$. 
 It is well-known \cite{gpML} that the conditional distribution $\func|\func(\designIn)$ is also a GP
 \begin{align}
-\funcEm[\Ndesign] \Def \func|\func(\designIn) \sim \GP(\gpMean[\Ndesign], \gpKer[\Ndesign]),
+\funcEm[\Ndesign] \Def \func|\func(\designIn) \sim \GP(\gpMean[\Ndesign], \gpKer[\Ndesign]), \label{generic_gp_conditional}
 \end{align}
 with mean and kernel given by 
 \begin{align}
@@ -613,8 +613,142 @@ $\llikEmMargDens[\Ndesign]$, which was already defined in \ref{post_dens_marg_ll
 
 % Sequential Design
 \section{Sequential Design}
+In applications, the GP emulator is typically constructed sequentially. \todo: finish intro here 
+
 \subsection{Background}
-\subsection{Integrated Expected Variance}
+
+\subsubsection{The Sequential Design Loop}
+Sequential design algorithms for GPs have been studied extensively across several fields. We introduce this topic 
+for a generic GP predictive distribution $\funcEm[\Ndesign] \Def \func|\func(\designIn)$, as defined in 
+\ref{generic_gp_conditional}. To be clear, this notation indicates that the GP prior 
+$\func \sim \GP(\gpMeanPrior, \gpKerPrior)$ has already been conditioned on the \textit{initial design}
+$\design[\Ndesign] \Def \{\designIn, \func(\designIn)\}$. We now consider the question of identifying a new set of $\Nbatch$
+inputs $\designBatchIn$ to augment the initial design. We denote the new design by 
+$\design[\Naugment] \Def \{\designIn[\Naugment], \func(\designIn[\Naugment])\}$, where 
+ $\designIn[\Naugment] \Def \designIn \cup \designBatchIn$. 
+Conditioning on the augmented design results in the updated GP
+\begin{align}
+\funcEm[\Naugment] \Def \func|\design[\Naugment] = \funcEm[\Ndesign] | \func(\designIn[\Nbatch])   \sim \GP(\gpMean[\Naugment], \gpKer[\Naugment]),
+\end{align}
+where the predictive mean $\gpMean[\Naugment]$ and covariance $\gpKer[\Naugment]$ are given by \ref{kriging_eqns}
+with $\{\designIn, \func(\designIn)\}$ replaced by $\{\designIn[\Naugment], \func(\designIn[\Naugment])\}$. This update 
+can be computed in $\BigO(\Nbatch^3)$ operations, a significant improvement over the naive $\BigO([\Ndesign + \Nbatch]^3)$
+implementation (\todo: add appendix on fast GP updates). Naturally, the new batch $\designBatchIn$ should be chosen to 
+yield maximal improvement in the GP model $\funcEm[\Naugment]$ with respect to the downstream task that is to be performed. 
+This idea naturally leads to an optimization problem of the form 
+\begin{align}
+\designBatchIn = \argmin_{\designBatchIn^\prime \subset \parSpace} \acq[\Ndesign](\designBatchIn^\prime), \label{acq_func_opt}
+\end{align}
+where $\acq[\Ndesign]: \parSpace^{\Nbatch} \to \R$ is an \textit{acquisition function} (i.e., \textit{design criterion}) that 
+encodes the quality of a batch of design points in terms of the task at hand. Iterating this procedure $\Nrounds$ times yields the so-called 
+\textit{sequential design} (also called \textit{active learning}) loop, summarized in \Cref{alg:seq_des_loop}.  
+
+\begin{algorithm}
+    \caption{Gaussian Process Sequential Design Loop}
+    \label{alg:seq_des_loop}
+    \begin{algorithmic}[1] % The number tells where the line numbering should start
+    \Function{seqDesign}{$\design[\Ndesign], \Nrounds$}     
+    	\State $\design[] \gets \design[\Ndesign]$ \Comment{Initial Design}
+	\State $\hat{f} \gets f|\design[] \sim \GP(\gpMean[\Ndesign], \gpKer[\Ndesign])$
+        \For{$\designIndex \gets 1,\Nrounds$} \Comment{Sequential Design Loop}
+        		\State $\designBatchIn \gets \argmin_{\designBatchIn^\prime \subset \parSpace} \acq[\Ndesign](\designBatchIn^\prime)$ 
+		\State $\design[] \gets \design[] \cup \{\designBatchIn, \func(\designBatchIn)\}$
+		\State $\hat{f} \gets \hat{f} | \design[]$
+	\EndFor
+	\EndFunction
+    \end{algorithmic}
+\end{algorithm}
+
+One could of course consider 
+varying the batch size $\Nbatch$ across the $\Nrounds$ iterations, but to simplify notation we keep $\Nbatch$ constant. We note that the 
+special case $\Nbatch = 1$ corresponds to the pure sequential design setting, in which the function $\func$ is evaluated at each acquired 
+point before considering the subsequent acquisition. The \textit{batch} sequential design setting $\Nbatch > 1$ is more challenging,  
+owing to the fact that $\func$ is only evaluated after an entire batch $\designBatchIn$ has been acquired, meaning that inputs must 
+be selected without observing the outputs of the other points in the batch. The applications motivating this work render the 
+pure sequential design setting completely infeasible, as a single function evaluation $f(\Par)$ may require thousands of CPU hours. 
+However, computing resources often allow $\BigO(100)$ function evaluations to be performed in parallel. Such constraints imply a 
+``large batch, few iterations'' setting which poses a greater challenge than the one-at-a-time pure sequential design that is 
+often considered in the literature.
+
+\subsubsection{Acquisition Functions}
+We now summarize some particular choices of acquisition function $\acq[\Ndesign]$ which are popular in practice. These will form 
+the basis for extensions that target the specific goal of GP-induced posterior approximation. We begin by emphasizing that the 
+choice of acquisition function should reflect how the GP is being used in downstream tasks. Perhaps the most common goal is that 
+of optimization. The field of \textit{Bayesian optimization} is dedicated to this question, resulting in a wide variety of 
+proposed acquisition functions that are tailored to the task of optimizing expensive black-box functions $\func$; 
+see \cite{gramacy2020surrogates} and [\todo: include other citation] textbook treatments. 
+The related field of \textit{Bayesian quadrature} \cite{BayesQuadrature, BayesQuadRatios} [\todo: other references]
+instead focuses on the goal of approximating integrals with expensive integrands. The computer experiments community 
+focuses on various tasks, including contour estimation [\todo: cite] and sensitivity analysis [\todo: cite]. However, perhaps the 
+most common goal considered in the sequential design of computer experiments is that of filling the input space $\parSpace$. 
+\todo: the below designs are not necessarily space-filling (depends on the kernel); should make this more clear. Perhaps 
+it is more clear to say that these all target GP predictions over all of the parameter space, which often tends to have a space-filling 
+effect. 
+Such \textit{space-filling} designs seek to spread the design points ``evenly'' over $\parSpace$ in some specific sense. 
+To this end, it seems reasonable to choose points in locations where the GP is uncertain. Defining ``uncertainty'' in terms 
+of variance or entropy yields the \textit{maximum variance (max-var)} and \textit{maximum entropy (max-ent)} acquisition functions, 
+respectively, 
+\begin{align}
+&\labelAcq[\Ndesign]{\maxvarLabel}(\Par) \Def -\Var[\funcEm[\Ndesign](\Par)] , 
+&&\labelAcq[\Ndesign]{\maxentLabel}(\Par) \Def -\Ent[\funcEm[\Ndesign](\Par)], \label{acq_max_var_ent}
+\end{align} 
+where $\Ent[Z]$ denotes the entropy of a random variable $Z$. The variance and entropy are negated to align with our convention 
+of minimizing acquisition functions. The acquisition functions \ref{acq_max_var_ent} are defined to take a single design point as 
+input, but they can be generalized to operate in the batch setting (\todo: look into this, I think the generalization of maxent leads 
+to the determinant of the covariance matrix; for maxvar is there a generalization?). A noted weakness of these criteria is their locality; 
+they target the single point with maximal uncertainty, ignoring the effect of the acquisition on the remainder of the design space. 
+This often favors points at the boundaries of $\parSpace$, behavior that is often not desirable \cite{gramacy2020surrogates}. 
+Addressing this weakness, an alternative approach is to minimize the \textit{conditional} uncertainty 
+($\Var[\funcEm[\Ndesign](\Par) | \designBatchIn]$ or $\Ent[\funcEm[\Ndesign](\Par) | \designBatchIn]$), \textit{averaged} over 
+the input space $\parSpace$. The resulting \textit{integrated uncertainty criteria}
+\begin{align}
+\labelAcq[\Ndesign]{\intvarLabel}(\designBatchIn)
+&= \int_{\parSpace} \Var[\funcEm[\Ndesign](\Par) | \designBatchIn] \weightDens(\Par) d\Par, \label{acq_int_var} \\ 
+\labelAcq[\Ndesign]{\intentLabel}(\designBatchIn)
+&= \int_{\parSpace} \Ent[\funcEm[\Ndesign](\Par) | \designBatchIn] \weightDens(\Par) d\Par, \label{acq_int_ent}
+\end{align}
+are naturally defined in the batch setting and account for the global effect of acquiring new design points. Here $\weightDens$ is 
+a probability density on $\parSpace$. Since $\Var[\funcEm[\Ndesign](\Par) | \designBatchIn] = \gpKer[\Naugment](\Par)$ and 
+$\Ent[\funcEm[\Ndesign](\Par) | \designBatchIn] = \frac{1}{2} \log(2\pi e \gpKer[\Naugment](\Par))$, the integrands of 
+\ref{acq_int_var} and \ref{acq_int_ent} are available in closed-form. However, outside of special choices for $\parSpace$ and 
+$\weightDens$ (\todo: cite), the integrals are typically replaced with Monte Carlo approximations. It is worth noting that 
+these acquisition functions must be computed without observing the function evaluations $\func(\designBatchIn)$, which is 
+not an issue for any of the above acquisitions given that $\gpKer[\Naugment](\Par)$ is independent of $\func(\designBatchIn)$ 
+(see \ref{kriging_eqns}). A nice summary and analysis of integrated variance criteria of the form \ref{acq_int_var} is given 
+in \cite{Mercer_kernels_IVAR}, with an emphasis is on one-shot, rather than sequential, design. 
+
+\subsection{Goal-Oriented Acquisition Functions: Posterior Approximation}
+The previous section introduced several acquisition functions that seek to improve GP predictions by targeting
+design point batches that cause large reductions of uncertainty in the GP predictive distribution. While such criteria may be appropriate 
+when good predictions are required across all of $\parSpace$, this may not align well with the goal of constructing a GP emulator 
+which induces a quality posterior approximation. In the Bayesian inverse problem setting, it has repeatedly been noted that the 
+posterior is often highly concentrated relative to the prior. Intuitively, one would therefore expect that the GP emulator need only 
+achieve a high predictive accuracy in the region with high posterior mass, and avoid wasteful acquisition of design points in 
+regions with negligible mass. This intuition is placed on more rigorous ground in \cite{StuartTeck2}, in which bounds on the 
+posterior error are given in terms of the likelihood approximation error in a $L^2_{\postDens}(\parSpace)$ sense. The authors 
+stated motivation was to provide rigorous justification for the use of ensemble Kalman methods as a cheap experimental 
+design method for the training of GP emulators \cite{CES, idealizedGCM}. These so-called ensemble Kalman inversion methods 
+often require $\BigO(10^3)$ sequential forward model evaluations, a significant improvement over MCMC but still intractable for 
+forward models of significant computational expense, such as those that motivated the present work. 
+
+We instead focus on design methods that fit within the sequential design framework summarized in \Cref{alg:seq_des_loop}, and 
+are tailored to the goal of posterior approximation. The main idea is to define acquisition functions based on 
+the unnormalized posterior density emulator ($\fwdEmRdm[\Ndesign]{\postDens}(\Par)$ or $\llikEmRdmDens[\Ndesign](\Par)$), 
+rather than the underlying GPs themselves. This problem has gained recent attention, and is addressed in 
+\cite{SinsbeckNowak, Surer2023sequential, VehtariParallelGP, briol2017sampling, ranjan2016inverse, 
+	landslideCalibration, KandasamyActiveLearning2015, Kandasamy_2017, wang2018adaptive,   
+	weightedIVAR, quantileApprox, hydrologicalModel, briol2017sampling}. 
+[\todo: need to look at the method used in \cite{quantileApprox, hydrologicalModel} more closely.]
+As an initial example, we consider tailoring the $\maxvarLabel$ and $\maxentLabel$ to the posterior approximation goal in 
+the log-likelihood emulation setting. Their natural analogs in this setting are 
+\begin{align}
+&\labelAcq[\Ndesign]{\maxexpvarLabel}(\Par) \Def -\Var[\llikEmRdmDens[\Ndesign](\Par)] , 
+&&\labelAcq[\Ndesign]{\maxexpentLabel}(\Par) \Def -\Ent[\llikEmRdmDens[\Ndesign](\Par)]. \label{acq_max_exp_var_ent}
+\end{align} 
+The ``exp'' in the naming convention highlights that these criteria are being applied to the exponentiated GP 
+$\Exp{\llikEm(\Par)}$ (ignoring the scaling by the prior). Thus, many of the acquisition functions considered here can be 
+generically viewed as the analogs of existing GP acquisition functions to log-normal processes (LNPs). 
+
 
 % Learning Likelihood Parameters
 \section{Learning Likelihood Parameters} \label{section_lik_par}
